--- a/StoreFront/Web.config
+++ b/StoreFront/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="StoreFrontDBConnectionString" connectionString="Data Source=667CCW1\SQLEXPRESS;Initial Catalog=StoreFrontDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="StoreFrontDBEntities" connectionString="metadata=res://*/Models.MyModel.csdl|res://*/Models.MyModel.ssdl|res://*/Models.MyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=667CCW1\SQLEXPRESS;initial catalog=StoreFrontDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="StoreFrontDBEntities" connectionString="metadata=res://*/Models.StoreFrontEntities.csdl|res://*/Models.StoreFrontEntities.ssdl|res://*/Models.StoreFrontEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=667CCW1\SQLEXPRESS;initial catalog=StoreFrontDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,6 +19,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms cookieless="UseCookies" loginUrl="~/User/Login" slidingExpiration="true"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
@@ -59,7 +61,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
