--- a/StoreFront/packages.config
+++ b/StoreFront/packages.config
@@ -4,8 +4,11 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="ekko-lightbox" version="4.0.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Foolproof" version="0.9.4518" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery.mvc.LightBox" version="1.0.2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net452" />
@@ -15,7 +18,7 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net452" />
@@ -27,6 +30,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
