--- a/StoreFront/Web.config
+++ b/StoreFront/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="StoreFrontDBConnectionString" connectionString="Data Source=667CCW1\SQLEXPRESS;Initial Catalog=StoreFrontDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="StoreFrontDBEntities" connectionString="metadata=res://*/Models.StoreFrontEntities.csdl|res://*/Models.StoreFrontEntities.ssdl|res://*/Models.StoreFrontEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=667CCW1\SQLEXPRESS;initial catalog=StoreFrontDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="StoreFrontDBEntities" connectionString="metadata=res://*/Models.StoreFrontEntities.csdl|res://*/Models.StoreFrontEntities.ssdl|res://*/Models.StoreFrontEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=667CCW1\SQLEXPRESS;initial catalog=StoreFrontDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StoreFrontDataEntities" connectionString="metadata=res://*/StoreFrontDataModel.csdl|res://*/StoreFrontDataModel.ssdl|res://*/StoreFrontDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=667CCW1\SQLEXPRESS;initial catalog=StoreFrontDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
